# School_Work

./: Counting_Occurences.cpp  Pendulum_Project.c  Vim_HelloWorld  add  main.cp
Advanced_Python_For_Biologists_Exercises/Chapter3-DataStructures/: DistanceMatrix.py
Assignment_2_my_own_implementation/Assignment_2_my_own_implementation/Assignment_2_my_own_implementation/: main.cpp
Assignment_2_my_own_implementation/Assignment_2_my_own_implementation/Assignment_2_my_own_implementation.xcodeproj/: project.pbxproj
Biology/Advanced_Python_For_Biologists_Exercises/: readme.txt
Biology/Advanced_Python_For_Biologists_Exercises/Chapter2-Recursion/: Dictionary-Taxonomy.py
Biology/PythonBioTools/: PunnettSquareCalculator.py  readme.txt
Counting_Occurences/: Counting_Occurences.cpp  main.cpp  main.h
Counting_Occurences/Count_Class/: CountOccurences.cpp  CountOccurences.hpp
Counting_Occurences/sort/: sort.cpp  sort.h
Cup_Car_Concepts/Finite_State_Machine/: main.c
Extensions/: StaticPointers.cpp
RTOS/: CMakeLists.txt  README.md
RTOS/main/: TimersandUpdates.cpp  TimersandUpdates.hpp  main.cpp  main.h  voidFuctionLibrary.hpp
RTOS/main/UtilityClasses/RTOSClass/: RTOS.cpp  RTOS.hpp  helperFunctions.cpp
RTOS/main/UtilityClasses/TaskClass/: Task.hpp
Verilog_Labs/Lab2/: Code.v.txt  testbench.v.txt
Verilog_Labs/Lab3/: Edge_Detector.v.v.txt  Edge_Detector_tb.v
Verilog_Labs/Lab4/: ALU_MODULE.v.txt  ALU_TEST_BENCH.txt  ALU_TEST_BENCH.v
Verilog_Labs/Lab5/: Register_Code.v  Register_tb.v
Verilog_Labs/Lab6/: BCD.v  BCD_tb.v  readme.txt
(+88 files in other folders)
